# AE246

./: LICENSE  README.md  pyproject.toml  requirements.txt
HW2/: hw2.py
HW_1/: ae246_hw1.py  wing_geometry.m
scripts/: run_q1_q2.py  run_q3.py
src/ae246_hw1/: aero.py  geometry.py  moments.py
